# zagori-tools

./: .gitignore  README.md  openapi.yaml  pyproject.toml
src/zagori_tools/: mcp.py  openapi.json  server.py
tests/: test_server.py
